--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/material": "^5.8.2",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -12,6 +14,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "leaflet": "^1.8.0",
     "moment": "^2.29.3",
     "react": "^17.0.2",
